<resources>
    <string name="app_name">School Manager</string>

    <string name="error_no_subjects">No subjects added yet</string>
    <string name="error_missing_required">Please fill all required fields</string>

    <string name="success_homework_created">Homework created successfully</string>
    <string name="success_homework_updated">Homework updated successfully</string>
    <string name="success_homework_deleted">Homework deleted successfully</string>
    <string name="success_subject_created">Subject created successfully</string>
    <string name="success_subject_updated">Subject created successfully</string>

    <string name="confirm_subject_deletion_title">Are you sure?</string>
    <string name="confirm_subject_deletion_message">
        Deleting a subject also deletes all homework belonging to it, and this cannot be undone.
        Do you want to continue?
    </string>
    <string name="confirm_subject_deletion_positive">Yes</string>
    <string name="confirm_subject_deletion_negative">No</string>

    <string name="bulk_homework_deletion_title">Are you sure?</string>
    <string name="bulk_homework_deletion_message">
        This action cannot be undone
    </string>
    <string name="bulk_homework_deletion_cancel">Cancel</string>
    <string name="bulk_homework_deletion_confirm">Confirm</string>

    <string name="bottom_nav_today_button">Today</string>
    <string name="bottom_nav_tomorrow_button">Tomorrow</string>
    <string name="bottom_nav_late_button">Late</string>
    <string name="bottom_nav_all_button">Show all</string>

    <string name="title_create_homework">Create homework</string>
    <string name="title_edit_homework">Edit homework</string>
    <string name="title_create_subject">Create subject</string>
    <string name="title_edit_subject">Edit subject</string>
    <string name="title_details_fragment">Details</string>
    <string name="title_deadline_time_picker">Select homework deadline time</string>
    <string name="title_deadline_date_picker">Select homework deadline date</string>
    <plurals name="title_items_selected">
        <item quantity="one">%d item selected</item>
        <item quantity="other">%d items selected</item>
    </plurals>

    <string name="action_undo_delete">Undo</string>
    <string name="action_add_subject">Add subject</string>
    <string name="action_delete_selected">Delete selected</string>
    <string name="action_mark_complete">Mark as complete</string>

    <string name="options_sort_title">Sort by</string>
    <string name="options_sort_name_option_title">By name</string>
    <string name="options_sort_deadline_option_title">By date</string>

    <string name="details_deadline_subtitle">Deadline</string>
    <string name="details_subject_subtitle">Subject</string>

    <string name="title_settings">Settings</string>
    <string name="settings_dark_theme_title">Dark theme</string>
    <string-array name="settings_dark_theme_options">
        <item>Light</item>
        <item>Dark</item>
        <item>System default</item>
    </string-array>
    <string-array name="settings_dark_theme_values">
        <item>1</item>
        <item>2</item>
        <item>-1</item>
    </string-array>

    <!-- TODO Someday i'll change the id's of these strings. -->

    <string name="fragment_home_label">Home</string>
    <string name="fragment_home_no_items">No homework added yet.</string>
    <string name="fragment_home_edit_item">Edit</string>
    <string name="fragment_home_delete_item">Delete</string>

    <string name="fragment_add_homework_label">Add homework</string>
    <string name="fragment_add_homework_name">Name</string>
    <string name="fragment_add_homework_description">Description</string>
    <string name="fragment_add_homework_deadline_date">Date</string>
    <string name="fragment_add_homework_deadline_time">Time</string>
    <string name="fragment_add_homework_subject">Subject</string>
    <string name="fragment_add_homework_done">Done</string>

    <string name="fragment_subject_label">Subjects</string>

    <string name="fragment_add_subject_label">Add subject</string>
    <string name="fragment_add_subject_name">Name</string>
    <string name="fragment_add_subject_location">Location</string>
    <string name="fragment_add_subject_teacher">Teacher</string>

</resources>