<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="me.brandom.schoolmanager.ui.home.HomeFragment"
        android:label="@string/fragment_home_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_addHomeworkFragment"
            app:destination="@id/addHomeworkFragment" />
    </fragment>
    <fragment
        android:id="@+id/addHomeworkFragment"
        android:name="me.brandom.schoolmanager.ui.homeworkform.HomeworkFormFragment"
        android:label="@string/fragment_add_homework_label"
        tools:layout="@layout/fragment_homework_form" />
    <fragment
        android:id="@+id/subjectFragment"
        android:name="me.brandom.schoolmanager.ui.subject.SubjectFragment"
        android:label="@string/fragment_subject_label"
        tools:layout="@layout/fragment_subject">
        <action
            android:id="@+id/action_subjectFragment_to_addSubjectFragment"
            app:destination="@id/addSubjectFragment" />
    </fragment>
    <fragment
        android:id="@+id/addSubjectFragment"
        android:name="me.brandom.schoolmanager.ui.subject.AddSubjectFragment"
        android:label="@string/fragment_add_subject_label"
        tools:layout="@layout/fragment_add_subject" />
</navigation>